# human-in-the-loop

./: .env.example  .gitignore  human-in-the-loop-guide.md  main.py  pyproject.toml
frontend/: chat_local.py
src/goop/: config.py  graph.py  mcp_config.json
